# VoiceCart

./: .env.example  .gitignore  README.md  pyproject.toml
src/voicecart/: __init__.py  config.py  main.py  models.py  nlu.py  swiggy_mcp.py  voice.py
tests/: test_nlu.py
