[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voicecart"
version = "0.1.0"
description = "Raspberry Pi voice assistant for building a Swiggy Instamart grocery cart."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "google-genai>=1.0",
]

[project.optional-dependencies]
voice = [
  "sounddevice>=0.4.7",
  "vosk>=0.3.45",
  "pyttsx3>=2.90",
]
test = [
  "pytest>=8.2.0",
]

[project.scripts]
voicecart = "voicecart.main:main"

[tool.setuptools.packages.find]
where = ["src"]
